--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <!-- Write your HTML in this file -->
+<!--doctype html-->
+<html>
+<head>
+</head>
+<body>
 <H1>Hello, World!</H1>
+</body>
+</html>
